Fixed the huge gap at the bottom of the page on narrow widths

--- a/a/css/modules/blog-nav.css
+++ b/a/css/modules/blog-nav.css
@@ -1,16 +1,23 @@
 /* line 6, ../../sass/modules/blog-nav.sass */
 .blog-nav-container {
-  height: 300px;
-  height: 30rem;
+  height: 200px;
+  height: 20rem;
+}
+@media (min-width: 512px) {
+  /* line 6, ../../sass/modules/blog-nav.sass */
+  .blog-nav-container {
+    height: 300px;
+    height: 30rem;
+  }
 }
 
-/* line 9, ../../sass/modules/blog-nav.sass */
+/* line 11, ../../sass/modules/blog-nav.sass */
 .is-home .blog-nav-container {
   height: 150px;
   height: 15rem;
 }
 
-/* line 12, ../../sass/modules/blog-nav.sass */
+/* line 14, ../../sass/modules/blog-nav.sass */
 .blog-nav {
   opacity: 1;
   -webkit-transition-property: opacity;
@@ -22,28 +29,35 @@
   -o-transition-duration: 0.5s;
   transition-duration: 0.5s;
   position: relative;
-  height: 300px;
-  height: 30rem;
+  height: 200px;
+  height: 20rem;
   width: 100%;
 }
+@media (min-width: 512px) {
+  /* line 14, ../../sass/modules/blog-nav.sass */
+  .blog-nav {
+    height: 300px;
+    height: 30rem;
+  }
+}
 
-/* line 20, ../../sass/modules/blog-nav.sass */
-.blog-nav-pagination {
+/* line 24, ../../sass/modules/blog-nav.sass */
+.is-home .blog-nav-pagination {
   height: 150px;
   height: 15rem;
 }
 
-/* line 23, ../../sass/modules/blog-nav.sass */
+/* line 27, ../../sass/modules/blog-nav.sass */
 .js .blog-nav {
   opacity: 0;
 }
 
-/* line 26, ../../sass/modules/blog-nav.sass */
+/* line 30, ../../sass/modules/blog-nav.sass */
 .is-not-top-gutter-shown .blog-nav {
   opacity: 1;
 }
 
-/* line 29, ../../sass/modules/blog-nav.sass */
+/* line 33, ../../sass/modules/blog-nav.sass */
 .is-not-home.is-top .blog-nav {
   opacity: 1;
   height: 100%;
@@ -52,7 +66,7 @@
   left: 0;
 }
 
-/* line 36, ../../sass/modules/blog-nav.sass */
+/* line 40, ../../sass/modules/blog-nav.sass */
 .blog-nav-previous, .blog-nav-next {
   position: absolute;
   bottom: 60px;
@@ -80,7 +94,7 @@
   line-height: 2.4rem;
 }
 
-/* line 53, ../../sass/modules/blog-nav.sass */
+/* line 57, ../../sass/modules/blog-nav.sass */
 .is-fits-blog-nav-large .blog-nav-previous, .is-fits-blog-nav-large .blog-nav-next {
   padding: 30px;
   padding: 3rem;
@@ -92,18 +106,18 @@
   line-height: 3rem;
 }
 
-/* line 60, ../../sass/modules/blog-nav.sass */
+/* line 64, ../../sass/modules/blog-nav.sass */
 .blog-nav-pagination .blog-nav-previous, .blog-nav-pagination .blog-nav-next {
   width: 15%;
 }
 
-/* line 63, ../../sass/modules/blog-nav.sass */
+/* line 67, ../../sass/modules/blog-nav.sass */
 .blog-nav-previous:hover, .blog-nav-next:hover {
   background: rgba(87, 55, 29, 0.6);
   color: white;
 }
 
-/* line 67, ../../sass/modules/blog-nav.sass */
+/* line 71, ../../sass/modules/blog-nav.sass */
 .blog-nav-previous:active, .blog-nav-next:active {
   -webkit-transition-property: none;
   -moz-transition-property: none;
@@ -112,43 +126,43 @@
   background: rgba(87, 55, 29, 0.8);
 }
 
-/* line 71, ../../sass/modules/blog-nav.sass */
+/* line 75, ../../sass/modules/blog-nav.sass */
 .is-top .blog-nav-previous, .is-top .blog-nav-next {
   display: none;
   color: white;
 }
 
-/* line 77, ../../sass/modules/blog-nav.sass */
+/* line 81, ../../sass/modules/blog-nav.sass */
 .is-not-home.is-fits-blog-nav-simple.is-top .blog-nav-previous, .is-not-home.is-fits-blog-nav-simple.is-top .blog-nav-next {
   display: block;
   bottom: 15px;
   bottom: 1.5rem;
 }
-/* line 82, ../../sass/modules/blog-nav.sass */
+/* line 86, ../../sass/modules/blog-nav.sass */
 .is-not-home.is-fits-blog-nav.is-top .blog-nav-previous, .is-not-home.is-fits-blog-nav.is-top .blog-nav-next {
   display: block;
   bottom: 50px;
   bottom: 5rem;
 }
-/* line 87, ../../sass/modules/blog-nav.sass */
+/* line 91, ../../sass/modules/blog-nav.sass */
 .is-not-home.is-fits-blog-nav-large.is-top .blog-nav-previous, .is-not-home.is-fits-blog-nav-large.is-top .blog-nav-next {
   display: block;
   bottom: 80px;
   bottom: 8rem;
 }
 
-/* line 91, ../../sass/modules/blog-nav.sass */
+/* line 95, ../../sass/modules/blog-nav.sass */
 .blog-nav-previous {
   left: 0;
 }
 
-/* line 94, ../../sass/modules/blog-nav.sass */
+/* line 98, ../../sass/modules/blog-nav.sass */
 .blog-nav-next {
   right: 0;
   text-align: right;
 }
 
-/* line 98, ../../sass/modules/blog-nav.sass */
+/* line 102, ../../sass/modules/blog-nav.sass */
 .blog-nav-label {
   font-family: adelle-sans;
   text-transform: uppercase;
@@ -159,7 +173,7 @@
   line-height: 1.6rem;
 }
 
-/* line 105, ../../sass/modules/blog-nav.sass */
+/* line 109, ../../sass/modules/blog-nav.sass */
 .is-fits-blog-nav-large .blog-nav-label {
   font-size: 15px;
   font-size: 1.5rem;
@@ -167,12 +181,12 @@
   line-height: 2rem;
 }
 
-/* line 109, ../../sass/modules/blog-nav.sass */
+/* line 113, ../../sass/modules/blog-nav.sass */
 .blog-nav-label .separator {
   display: none;
 }
 
-/* line 112, ../../sass/modules/blog-nav.sass */
+/* line 116, ../../sass/modules/blog-nav.sass */
 .blog-nav-post-title {
   font-family: adelle;
   font-weight: 400;
@@ -180,19 +194,19 @@
   display: none;
 }
 @media (min-width: 512px) {
-  /* line 112, ../../sass/modules/blog-nav.sass */
+  /* line 116, ../../sass/modules/blog-nav.sass */
   .blog-nav-post-title {
     display: block;
   }
 }
 
-/* line 120, ../../sass/modules/blog-nav.sass */
+/* line 124, ../../sass/modules/blog-nav.sass */
 .is-top .blog-nav-post-title {
   display: none;
 }
 
 @media (min-width: 512px) {
-  /* line 123, ../../sass/modules/blog-nav.sass */
+  /* line 127, ../../sass/modules/blog-nav.sass */
   .is-fits-blog-nav.is-top .blog-nav-post-title {
     display: block;
   }
